--- a/CardPickerWPF/MainWindow.xaml
+++ b/CardPickerWPF/MainWindow.xaml
@@ -5,8 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CardPickerWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Card Picker" Height="300" Width="800">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <ListBox x:Name="listOfCards" Grid.Column="1" Margin="20,20,20,20" Grid.RowSpan="2" FontSize="20"/>
+        <StackPanel Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,20,20,20">
+            <Label x:Name="label" Content="How many cards should I pick?" HorizontalAlignment="Center"/>
+            <TextBox x:Name="currentNumberBox" TextWrapping="Wrap" Width="120" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,10" TextAlignment="Center"/>
+            <Slider x:Name="numberOfCards" Width="120" Minimum="1" Maximum="15" TickPlacement="BottomRight" Foreground="Black" ValueChanged="numberOfCards_ValueChanged" Margin="0,0,0,5"/>
+        </StackPanel>
+        <Button x:Name="button" Content="Pick some cards" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" FontSize="20" Click="button_Click"/>
     </Grid>
 </Window>
